--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,19 +4,30 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-item>
-  <ion-input label="Email" type="email" placeholder="email@domain.com"></ion-input>
-</ion-item>
+<ion-content [fullscreen]="true">
 
-<ion-item>
-  <ion-input label="Password" type="password" value=""></ion-input>
-</ion-item>
+  <div class="ion-padding">
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email"></ion-input>
+    </ion-item>
 
-<ion-button id="button" shape="round">Iniciar Sesión</ion-button>
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
 
-<p></p>
+    <ion-button expand="full" shape="round" class="ion-margin-top">Iniciar Sesión</ion-button>
 
-<div id="container">
-  <strong>No tienes una cuenta?</strong>
-  <p>Registrate  <a routerLink="/registration">Registrarse</a></p>
-</div>
+    <div id="container" class="ion-margin-top">
+      <strong>No tienes una cuenta?</strong>
+      <p><a routerLink="/registration">Registrarse</a></p>
+    </div>
+
+    <div id="container">
+      <strong>TOMAR FOTO</strong>
+      <p><a routerLink="/home">Iniciar Cámara</a></p>
+    </div>
+
+  </div>
+</ion-content>
