--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,7 +6,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <div class="ion-padding">
+  <div id=""class="ion-padding">
     <ion-item>
       <ion-label position="floating">Email</ion-label>
       <ion-input type="email"></ion-input>
