--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,9 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+// src/global.scss
+body, .ion-page, .ion-page ion-content {
+    background: #ff0000 !important;
+  }
+  
