--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,3 +1,6 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
-$ion-background-color: #ffffff; 
+// src/theme/variables.scss
+$background-color: #e0e0e0;
+
+.ion-page, .ion-page ion-content {
+  background-color: $background-color !important;
+}
